--- a/create.html
+++ b/create.html
@@ -33,7 +33,7 @@
             border: 3px solid white;
             width: 100%;
             height: 400px;
-            background-image: url(Think.jpg);
+            background-image: url();
             background-repeat: no-repeat;
             background-size: 100% 100%;
             object-fit: cover;
