--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             border: 3px solid white;
             width: 100%;
             height: 400px;
-            background-image: url(top\ picture.jpg);
+            background-image: url(https://github.com/Tolaxyz/layout/tree/main/img.create);
             background-repeat: no-repeat;
             background-size: 100% 100%;
             object-fit: cover;
