--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             border: 3px solid white;
             width: 100%;
             height: 400px;
-            background-image: url(https://github.com/Tolaxyz/layout/blob/main/img.create/Think.jpg?raw=true);
+            background-image: url(https://github.com/Tolaxyz/layout/blob/main/img.create/Think.jpg);
             background-repeat: no-repeat;
             background-size: 100% 100%;
             object-fit: cover;
