--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div id="top_bottom">
         <div class="top"></div>
     <div class="bottom"></div>
-    <img id="hyella" src="found.png" >
+    <img id="hyella" src="" >
 </div>
    
 </div>
