--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             float: left;
             width: 50%;
             height: 806px;
-            background-image: url(blue\ hyella\ bulb.jpg);
+            background-image: url(https://github.com/Tolaxyz/layout/blob/main/img.create/blue%20hyella%20bulb.jpg?raw=true);
             background-repeat: no-repeat;
             background-size: 100% 100%;
             object-fit: cover;
