--- a/index.html
+++ b/index.html
@@ -67,12 +67,22 @@
         }
         @media(max-width:768px){
             #hyella{
-            height: 350px;
-            width: 350px;
+            height: 250px;
+            width: 250px;
             position: absolute;
-            top: 210px;
-            left:19%;
+            top: 265px;
+            left:5%;
             transform: translateX(-50) translateY(-50);
+        }
+        p{
+            font-size: 20px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: white;
+            letter-spacing: 0.1em;
+            position: absolute;
+            top: 100%;
+            left: 25%;
+            transform: translateX(-50%) translateY(-50%);
         }
         }
     </style>
