--- a/index.html
+++ b/index.html
@@ -84,7 +84,17 @@
             left: 25%;
             transform: translateX(-50%) translateY(-50%);
         }
+        .side{
+            height:706px;
         }
+        .top{
+            height:300px;
+        }
+        .bottom{
+            height:300px;
+        }
+        }
+        
     </style>
 </head>
 <body>
